Closed Bug 144428 Opened 24 years ago Closed 23 years ago

[Qt] Qt-Mozilla hangs in nsASingleFragmentCString::GetReadableFragment (?) on startup, before bringing up the UI.

Categories

(Core Graveyard :: GFX, defect, P2)

x86
Linux
defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: bero, Assigned: roland.mainz)

References

Details

(Whiteboard: [whitebox])

Attachments

(1 file, 1 obsolete file)

Last output (stderr): GFX: dpi=75 t2p=0.0526316 p2t=19 depth=16 JCG: eBorderStyle_close isn't handled yet... please fix me Correction: It doesn't crash, it just hangs forever after displaying the eBorderStyle_close message. My first guess is it waits for user input without bothering to show the dialog it's waiting for first, probably it forgets to enter the Qt event loop. Last couple of lines from ltrace: _ZNK24nsASingleFragmentCString19GetReadableFragmentER18nsReadableFragmentIcE17nsFragmentRequestj(0xbfffe160, 0xbfffe060, 1, 0, 0) = 0x4040e8e0 _ZNK24nsASingleFragmentCString19GetReadableFragmentER18nsReadableFragmentIcE17nsFragmentRequestj(0xbfffe160, 0xbfffe060, 3, 0, 0xbfffe160) = 0 _ZNK24nsASingleFragmentCString19GetReadableFragmentER18nsReadableFragmentIcE17nsFragmentRequestj(0xbfffe150, 0xbfffe060, 1, 0, 0) = 0x4040e8e5 _ZNK24nsASingleFragmentCString19GetReadableFragmentER18nsReadableFragmentIcE17nsFragmentRequestj(0xbfffe150, 0xbfffe060, 3, 0, 0) = 0 --- 0 (Real-time signal 0) --- breakpointed at 0x42028828 (?) breakpointed at 0x40444f57 (?) _ZNK24nsASingleFragmentCString19GetReadableFragmentER18nsReadableFragmentIcE17nsFragmentRequestj == nsASingleFragmentCString::GetReadableFragment(nsReadableFragment<char>&, nsFragmentRequest, unsigned) const (See comments on bug 144216)
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: Qt-Mozilla hangs on startup, before bringing up the UI. → Qt-Mozilla hangs in nsASingleFragmentCString::GetReadableFragment (?) on startup, before bringing up the UI.
Priority: -- → P2
Is this problem still an issue or can I mark the bug as WorksForMe (Qt build 2002-12-16-08-trunk starts up on my box without problems) ?
Whiteboard: [whitebox]
I am still wondering if is legal to call a nsAppShell event processing method before nsAppShell::Run() was called - if the answer is "no" then the XUL code is doing something wrong (since it hangs in |nsXULWindow::ShowModal()| without the patch) - timeless ?
Blocks: qt
Summary: Qt-Mozilla hangs in nsASingleFragmentCString::GetReadableFragment (?) on startup, before bringing up the UI. → [Qt] Qt-Mozilla hangs in nsASingleFragmentCString::GetReadableFragment (?) on startup, before bringing up the UI.
firstly, thanks for your patch! well, what does the code for other platforms do, does it use an approach like this patch as well?
Attachment #111367 - Attachment is obsolete: true
checked in
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: