Bug #144428 [Qt] Qt-Mozilla hangs in nsASingleFragmentCString::GetReadableFragment (?) on startup, before bringing up the UI. r=biesi sr=blizzard (ports)